Attempt to fix missing background on overscroll

--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -46,7 +46,7 @@ $primary-gradient: linear-gradient(100deg, #d62b39, #e23745 30%, #e64a3f 60%, #e
 	--invert-filter: invert(0);
 }
 
-.dark {
+:root:has(.dark) {
 	--background-color: #101010;
 	--background-color-fade: #10101040;
 	--text-color: #dddddd;
