--- a/public/index.scss
+++ b/public/index.scss
@@ -13,6 +13,20 @@ html {
   scroll-behavior: smooth;
 }
 
+html:before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: var(--background-color);
+  background-image: radial-gradient(var(--border-color) 2px, transparent 0);
+  background-size: 20px 20px;
+  background-position: -19px -19px;
+}
+
+
 body,
 html {
   max-width: 100dvw;
@@ -34,10 +48,9 @@ html {
 }
 
 body {
-  background: var(--background-color);
-  background-image: radial-gradient(var(--border-color) 2px, transparent 0);
-  background-size: 20px 20px;
-  background-position: -19px -19px;
+  background-color: var(--background-color);
+  height: fit-content;
+  overflow-y: scroll;
 }
 
 a {
@@ -59,33 +72,7 @@ a.button {
   }
 }
 
-.background-canvas {
-  position: fixed;
-  left: 0;
-  top: 0;
-
-  width: 100vw;
-  height: 100vh;
-
-  opacity: 0.4;
-  pointer-events: none;
-  filter: var(--bg-canvas-filter);
-}
-
-#background-canvas {
-  clip-path: rect(vars.$navbar-height 0 100% 100%);
-}
-
-#background-canvas-navbar {
-  clip-path: rect(0 0 vars.$navbar-height 100%);
-  z-index: 500;
-  opacity: 0.4;
-}
-
 main {
-  overflow-y: scroll;
-  max-height: 100%;
-
   & a {
     color: vars.$link-color;
   }
@@ -104,7 +91,7 @@ main {
   }
 
   &#contact {
-    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
   }
 }
 
@@ -434,12 +421,12 @@ main {
 
 .header {
   position: relative;
-  margin: vars.$navbar-height auto 1em auto;
+  margin: 0 auto 1em auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: fit-content;
-  min-height: min(calc(100vh - vars.$navbar-height), 1200px);
+  min-height: 100vh;
 }
 
 .section-header {
